feat: adicionar licenciamento e evoluir dispositivos AX
